[project]
name = "soi-common"
version = "0.0.1"
description = "Common code for scraping SOI website"
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "colorlog>=6.9.0",
    "imgcat>=0.6.0",
    "opencv-python-headless>=4.12.0.88",
    "pillow>=11.3.0",
    "pushbullet-py>=0.12.0",
    "pytesseract>=0.3.13",
    "requests>=2.32.5",
    "websocket-client>=1.8.0",
]

[project.urls]
homepage = "https://github.com/ramSeraph/soi_common"
repository = "https://github.com/ramSeraph/soi_common.git"


[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "soi_common",
]

[tool.hatch.build.targets.wheel]
include = [
    "soi_common",
]

